my plugin nafig

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: fmItemJoin
 version: '${project.version}'
 main: mc.feymer.fmitemjoin.Main
-authors: [ FeyMer ]
-website: vk.com/feymer3
+authors: [ FeyMer, MishaNeYT ]
+website: vk.com/feymer31
